refactor(ai): replace Math.min/max with Math.clamp for input token calculation
- Changed reasoning-effort default value from 'high' to 'max' in application.yml
- Replaced Math.min and Math.max operations with Math.clamp method
- Simplified effectiveInputLimit calculation logic
- Improved code readability and safety for token boundary handling